<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="hello">Hello World, Ohbaba!</string>
    <string name="app_name">噢粑粑</string>
    <string name="searchResult">搜索结果</string>
    <string name="getCommentContent">正在获取评论内容，请稍候...</string>
    <string name="getFunList">正在获取笑话列表，请稍候...</string>
    <string name="funRemind">您可以用手指左右滑动翻页来查看内容</string>
    <string name="search">正在定位并搜索,若有偏差请参照实际所在位置！</string>
    <string name="networkBusy">网络忙,请稍后再试</string>
    <string name="networkBusy1">您的网络不给力啊,返回重新再进来试试看!!!</string>
    <string name="networkBusy_new">您的信号不太好，请于室外重新尝试！</string>
    <string name="grade_toilet">请给洗手间打分</string>
    <string name="map">地图</string>
    <string name="download_failure">下载失败，继续使用当前版本！</string>
    <string name="input_yourname">请输入您的昵称！</string>
    <string name="thanks_edit">感谢您的修改</string>
    <string name="loading">加载中...</string>
    <string name="very_bad">群众表示太差了</string>
    <string name="a_little_bad">群众评价不咋地</string>
    <string name="general">群众评价一般</string>
    <string name="better">群众评价不错</string>
    <string name="very_good">群众评价很给力</string>
    <string name="grade_very_bad">很差</string>
    <string name="grade_Relative_bad">比较差</string>
    <string name="grade_general">一般</string>
    <string name="grade_better">不错</string>
    <string name="grade_good">很好</string>
    <string name="grade_ok">打分</string>
    <string name="grade_cancel">取消</string>
    <string name="grade_success">打分成功</string>
    <string name="message">信息</string>
    <string name="door">门板</string>
    <string name="together">同蹲</string>
    <string name="sos">求厕纸</string>
    <string name="now_nocomment">目前暂无新评论</string>
    <string name="refreshing_comment">正在更新评论，请稍候...</string>
    <string name="refreshing_list">正在更新列表，请稍候...</string>
    <string name="sendsms">我在噢粑粑(ohbaba.com)上看到的，一起开心下喽:\n</string>
    <string name="sendweibo_success">同步微博成功！</string>
    <string name="sendweibo_failure">网络异常或内容超过140个字符</string>
    <string name="sendweibo_fun">来自@噢粑粑(ohbaba.com)开心分享:\n</string>
    <string name="undo_syncweibo">您撤销了同步微博</string>
    <string name="syncweibo">您的评论现在可以同步到微博了</string>
    <string name="comment_success">评论成功，感谢您的评论</string>
    <string name="toilet_help1">的厕所@噢粑粑，木有带纸，求好心人送厕纸啊</string>
    <string name="toilet_help2">我在某某厕所，忘记带纸，求帮助</string>
    <string name="report_detailaddress">请填好详细地址</string>
    <string name="report_success">上报成功\n代表人民感谢你</string>
    <string name="report_failure">上报失败\n请稍后再试</string>
    <string name="reporting">正在上报信息,请稍等...</string>
    <string name="open_camera">正在打开摄像头\n请稍等...</string>
    <string name="getting_configure">正在获取配置参数，请稍等...</string>
    <string name="correct_paper">请修正有无手纸信息，谢谢！</string>
    <string name="correct_hindrance">请修正有无无障碍设施信息，谢谢！</string>
    <string name="correct_toiletaddress">请修正厕所地点，谢谢！</string>
    <string name="correct_toiletaddress_warn">请输入正确路径</string>
    <string name="correct_dunwei">请修正蹲位信息，谢谢！</string>
    <string name="correct_dunwei_yes">您确定有超过20个蹲位吗？没有的话，请重新输入！</string>
    <string name="correct_dunwei_warn">请输入正确的蹲位描述信息</string>
    <string name="dunwei_num">男n个，女n个</string>
    <string name="thanks_correct">感谢您的纠正！</string>
    <string name="declaration">我为人人，人人为我！</string>
    <string name="place_unknown">位置未知</string>
    <string name="review">(审核中)</string>
    <string name="report_declaration_one">上报宣言</string>
    <string name="hun_number">蹲位</string>
    <string name="man">男蹲位</string>
    <string name="woman">个，女蹲位</string>
    <string name="individual">个</string>
    <string name="with_hun">同蹲</string>
    <string name="throughout_the_country">目前全国有</string>
    <string name="the_same_as">人与你同蹲</string>
    <string name="fart">放屁</string>
    <string name="flush_water">冲水</string>
    <string name="write">个人资料（选填）</string>
    <string name="connect_with">个人资料只用于跟进厕所资讯之联络用途</string>
    <string name="your_names">您的名字</string>
    <string name="account_number">微博昵称</string>
    <string name="qq_number">QQ号码</string>
    <string name="show_toilet">将在厕所详情中显示</string>
    <string name="the_people">一切都是为了天朝的人民</string>
    <string name="area">地区（如果您觉得不准确可以点击修改）</string>
    <string name="your_area">你所在的地区</string>
    <string name="toilet_type">厕所类型（可点击修改）</string>
    <string name="detailed_site">详细地点</string>
    <string name="area_example">地点或街名,例如:</string>
    <string name="exampel">新街口大洋百货4楼</string>
    <string name="toilet_pic">厕所外景</string>
    <string name="left_pic">请点击左边的相框进行拍照，取厕所的外景拍摄</string>
    <string name="toilet_type_kind">厕所种类和设施</string>
    <string name="comment_toilet">备注</string>
    <string name="comment_toilet_example">任何有关此厕所的公开备注,例如:</string>
    <string name="close_door">晚上九点后会锁门</string>
    <string name="finish_win">完成输入!</string>
    <string name="your_name">请输入您的昵称！</string>
    <string name="has_paper">有纸</string>
    <string name="no_paper">无纸</string>
    <string name="has_hinader">有无障碍设施</string>
    <string name="not_hinader">无无障碍设施</string>
    <string name="toilet_place_right">请输入正确的厕所地点，谢谢！</string>
    <string name="door_plank">门板</string>
    <string name="hun_happy">蹲着乐</string>
    <string name="pic_wiat">正在获取图片,请稍等...</string>
    <string name="top">顶</string>
    <string name="partake_of">分享</string>
    <string name="around">您可以用手指左右滑动翻页来查看内容</string>
    <string name="detailed_information">详情</string>
    <string name="report_declaration">上报宣言：</string>
    <string name="people_assess">群众评价</string>
    <string name="loc_represent">位置描述</string>
    <string name="toilet_paper">手纸</string>
    <string name="no_hinder">无障碍设施</string>
    <string name="live_action">实景</string>
    <string name="no_pic">暂无图片</string>
    <string name="download_now">下载中，请稍候。。。</string>
</resources>