<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/text_bg_gray" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/bg_corners" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0dip" android:textColor="#ff0d5781" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/write" />
            <TextView android:textSize="15.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connect_with" />
            <View android:background="@drawable/separator" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/your_names" />
                <EditText android:id="@id/edit_yourname" android:background="@drawable/edit_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="79.0dip" android:layout_marginTop="3.0dip" android:singleLine="true" android:maxLength="4" android:inputType="textPersonName" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/account_number" />
                <EditText android:id="@id/edit_weibo" android:background="@drawable/edit_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="79.0dip" android:layout_marginTop="3.0dip" android:singleLine="true" android:maxLength="6" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/qq_number" />
                <EditText android:id="@id/edit_yourqq" android:background="@drawable/edit_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="85.0dip" android:layout_marginTop="3.0dip" android:singleLine="true" android:maxLength="11" android:numeric="integer" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_corners" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
            <TextView android:textSize="18.0dip" android:textColor="#ff0d5781" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/report_declaration_one" />
            <TextView android:textSize="15.0dip" android:textColor="#ff000000" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_toilet" />
            <View android:background="@drawable/separator" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            <EditText android:gravity="top" android:id="@id/edit_yourwords" android:background="@drawable/edit_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:hint="@string/the_people" android:singleLine="true" android:inputType="text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/area" style="\@style/text_title" />
            <EditText android:id="@id/edit_address" android:background="@drawable/edit_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:hint="@string/your_area" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/toilet_type" style="\@style/text_title" />
            <Spinner android:id="@id/toilet_type" android:background="@drawable/bg_corners5_selector" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" />
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/detailed_site" style="\@style/text_title" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_corners" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0dip" android:textColor="#ff0d5781" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/area_example" />
            <TextView android:textSize="15.0dip" android:textColor="#ff000000" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/exampel" />
            <View android:background="@drawable/separator" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            <EditText android:gravity="top" android:id="@id/edit_detailaddress" android:background="@drawable/edit_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:lines="2" android:maxLength="40" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/toilet_pic" style="\@style/text_title" />
            <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/picView" android:background="@drawable/pic_1" android:layout_width="120.0dip" android:layout_height="90.0dip" />
                <TextView android:textSize="15.0dip" android:textColor="#ff0d5781" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/left_pic" android:layout_toRightOf="@id/picView" />
            </RelativeLayout>
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/toilet_type_kind" style="\@style/text_title" />
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg_corners" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/no_hinder" />
                <ToggleButton android:disabledAlpha="?android:disabledAlpha" android:id="@id/disabledBtn" android:background="@drawable/btn_toggle_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@null" android:textOff="@null" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <View android:background="@drawable/separator" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/toilet_paper" />
                <ToggleButton android:disabledAlpha="?android:disabledAlpha" android:id="@id/paperBtn" android:background="@drawable/btn_toggle_bg" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@null" android:textOff="@null" android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/comment_toilet" style="\@style/text_title" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_corners" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0dip" android:textColor="#ff0d5781" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/comment_toilet_example" />
            <TextView android:textSize="15.0dip" android:textColor="#ff000000" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/close_door" />
            <View android:background="@drawable/separator" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            <EditText android:gravity="top" android:id="@id/edit_note" android:background="@drawable/edit_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:lines="5" />
        </LinearLayout>
        <TextView android:textSize="15.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center_horizontal" android:id="@id/finish_input" android:background="@drawable/bg_corners5_selector" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/finish_win" />
    </LinearLayout>
</ScrollView>